--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Lifestyle</title>
   </head>
   <body>
     <header>
@@ -23,8 +32,8 @@
     <main>
       <section class="card">
         <ul>
-          <li><h3>LIFESTYLE</h3></li>
           <li><img src="./img/pic1.png" alt="a girl on the concert" /></li>
+          <li><h3>LIFESTYLE</h3></li>
           <li><h2>More than just a music festival</h2></li>
           <li>
             <p>
@@ -37,8 +46,8 @@
         </ul>
 
         <ul>
-          <li><h3>LIFESTYLE</h3></li>
           <li><img src="./img/pic2.png" alt="coffe" /></li>
+          <li><h3>LIFESTYLE</h3></li>
           <li><h2>Life tastes better with coffee</h2></li>
           <li>
             <p>
@@ -51,8 +60,8 @@
         </ul>
 
         <ul>
-          <li><h3>PHOTODAIRY</h3></li>
           <li><img src="./img/pic3.png" alt="two girls" /></li>
+          <li><h3>PHOTODAIRY</h3></li>
           <li><h2>American dream</h2></li>
           <li>
             <p>
@@ -63,10 +72,10 @@
             </p>
           </li>
         </ul>
-        
+
         <ul>
-          <li><h3>PHOTODAIRY</h3></li>
           <li><img src="./img/pic4.png" alt="a guy in the coat" /></li>
+          <li><h3>PHOTODAIRY</h3></li>
           <li><h2>A day exploring the Alps</h2></li>
           <li>
             <p>
