position of elements

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
           </li>
         </ul>
       </section>
-      <button>Load more</button>
+      <div class="btn">
+        <button>Load more</button>
+      </div>
     </main>
   </body>
 </html>
